@@ -45,6 +45,6 @@ public final class InstanceZone implements IUserCommandHandler {
 
     @Override
     public final List<Integer> getUserCommandList() {
-        return Collections.singletonList(COMMAND_IDS);
+        return List.of(COMMAND_IDS);
     }
 }
