@@ -30,6 +30,6 @@ public final class Loc implements IUserCommandHandler {
 
     @Override
     public final List<Integer> getUserCommandList() {
-        return Collections.singletonList(COMMAND_ID);
+        return List.of(COMMAND_ID);
     }
 }
