@@ -29,6 +29,6 @@ public final class MyBirthday implements IUserCommandHandler {
 
     @Override
     public final List<Integer> getUserCommandList() {
-        return Collections.singletonList(COMMAND_ID);
+        return List.of(COMMAND_ID);
     }
 }
