@@ -60,6 +60,6 @@ public final class PartyInfo implements IUserCommandHandler {
 
     @Override
     public final List<Integer> getUserCommandList() {
-        return Collections.singletonList(COMMAND_ID);
+        return List.of(COMMAND_ID);
     }
 }
