@@ -53,6 +53,6 @@ public final class Time implements IUserCommandHandler {
 
     @Override
     public final List<Integer> getUserCommandList() {
-        return Collections.singletonList(COMMAND_ID);
+        return List.of(COMMAND_ID);
     }
 }
